--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -9,7 +9,7 @@ body{
     color:white;
     padding:15px 35px;
 }
-.btn-irregular{
+.btn-exception{
     font-size: 20px;
     font-weight: 700;
     color:#FD6E0A;
@@ -51,22 +51,29 @@ nav a{
 /* header related styles */
 .header{
     background-color:#FFF8F3;
+    background-image:url(../images/header_bg.png);
+    background-repeat:no-repeat;
+    background-position:bottom right;
 }
 .banner{
-    padding:30px 30px 30px 200px;
+    padding:30px 30px 0px 200px;
     color:#FFF8F3;
     display:flex;
     align-items:center;
+    justify-content:space-between;
 }
 .banner-greeting{
     font-size: 45px;
     font-weight: 600;
     color:#474747;
+    margin-bottom:0;
 }
 .banner-title{
     font-size: 85px;
     font-weight: 700;
     color:#181818;
+    margin-top:5px;
+    margin-bottom:20px;
 }
 .banner-text{
     font-size: 18px;
@@ -75,6 +82,7 @@ nav a{
     color:#757575;
     height:60px;
     width:580px;
+    margin-bottom:30px;
 }
 /* Picture related styles */
 .hardy-picture{
