--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -54,6 +54,9 @@ nav a{
     background-image:url(../images/header_bg.png);
     background-repeat:no-repeat;
     background-position:bottom right;
+    background-image:url(../images/developer.png);
+    background-repeat:no-repeat;
+    background-position:left;
 }
 .banner{
     padding:30px 30px 0px 200px;
