--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -20,6 +20,19 @@ body{
     height: 42px;
     width:150px;
 }
+.section-title{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+.section-description{
+    color: #757575;
+text-align: center;
+font-size: 18px;
+font-weight: 400;
+line-height: 30px;
+}
 /* nav related styles */
 nav{
     display:flex;
@@ -92,4 +105,14 @@ nav a{
     height:670px;
     width:580px;
 }
-
+/* about section related styles */
+.about{
+    width: 1140px;
+    height: 550px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin-left:150px;
+    margin-right:150px;
+    margin-top:130px;
+    padding:131px 150px;
+}
