--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -114,5 +114,25 @@ nav a{
     margin-left:150px;
     margin-right:150px;
     margin-top:130px;
-    padding:131px 150px;
+    margin-bottom:130px;
+    padding:131px 150px 131px 150px;
+}
+.info-title{
+    color: #757575;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 30px;
+
+}
+.info-description{
+    color:#474747;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 30px;
+}
+.about-info-container{
+    display:flex;
+    justify-content:space-around;
 }
