--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -136,7 +136,45 @@ nav a{
     display:flex;
     justify-content:space-around;
 }
+/* what i do related styles */
 #what-i-do{
     width:1140px;
     padding:0px 265px 30px 265px;
+}
+.skills-container{
+    display:flex;
+    gap:24px;
+}
+.skill{
+    padding:30px;
+    border-radius:5px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+.skill-description{
+    color: #757575;
+}
+/* resume related styles */
+.resume-container{
+    text-align:center;
+    width:1140px;
+    padding:70px 240px;
+}
+.resume-column-container{
+    display:flex;
+    gap:70px;
+    text-align:left;
+
+}
+.resume-column{
+    font-size: 30px;
+}
+.resume-title{
+    font-size: 25px;
+}
+.resume-institute, .resume-description{
+    color:757575
+}
+/* download cv button */
+.download-cv{
+    text-align:center;
 }
