--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -64,10 +64,10 @@ nav a{
 /* header related styles */
 .header{
     background-color:#FFF8F3;
-    background-image:url(../images/header_bg.png);
+    background-image:url('../images/header_bg.png');
     background-repeat:no-repeat;
     background-position:bottom right;
-    background-image:url(../images/developer.png);
+    background-image:url('../images/developer.png');
     background-repeat:no-repeat;
     background-position:left;
 }
